--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "to-do-list",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://horiagug.github.io/ToDoList",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -12,6 +13,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
+    "gh-pages": "^3.1.0",
     "history": "^5.0.0",
     "js-beautify": "^1.13.0",
     "jshint": "^2.12.0",
@@ -27,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy":  "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
